<resources>
    <string name="app_name">Activity LifeCyle</string>
    <string name="new_app_name">Avenger</string>
    <string name="mobile_number">Enter Phone no</string>
    <string name="password_number">Password</string>
    <string name="lon_in">Login</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="sign_up">Register Yourself</string>
    <string name="preference_file_name">Aventure preference</string>
</resources>