<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".NewActivity">
<ImageView
    android:id="@+id/imgCompnyLogo"
    android:layout_width="240dp"
    android:layout_height="100dp"
    android:src="@drawable/avengers_logo"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="30dp"
    android:maxLength="10"
    android:maxLines="1"/>
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number"
        android:inputType="number"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imgCompnyLogo"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_number"
        android:inputType="textWebPassword"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/username"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"/>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:layout_below="@id/password"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/lon_in"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/txtForgathers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass"
        android:layout_below="@id/btnLogin"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:padding="6dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:textSize="16sp"
        android:padding="6dp"/>
</RelativeLayout>